namespaces/asm-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm-ingress
  labels:
    name: asm-ingress # for NetworkPolicies
    istio.io/rev: asm-managed-rapid
