namespaces/asm-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asm-ingressgateway
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "asm-ingressgateway"}'
    cloud.google.com/app-protocols: '{"http2":"HTTP2"}'
  labels:
    asm: ingressgateway
spec:
  ports:
  # status-port exposes a /healthz/ready endpoint that can be used with GKE Ingress health checks
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  # Any ports exposed in Gateway resources should be exposed here.
  - name: http2
    port: 80
  - name: https
    port: 443
  selector:
    asm: ingressgateway
  type: ClusterIP
