namespaces/asm-ingress/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: asm-ingressgateway
spec:
  selector:
    asm: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*" # Using the wildcard entry sends the encrypted packet (from GCLB) to the ASM ingress gateway which decrypts the packet and uses the HTTP Host Header (in the decrypted packet) to make routing decisions (via VirtualService).
