namespaces/asm-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asm-ingressgateway
  annotations:
    #kubernetes.io/ingress.allow-http: "false" disable because it avoid the https redirection defined in the frontendconfig
    kubernetes.io/ingress.global-static-ip-name: mygke-asm-ingressgateway
    networking.gke.io/managed-certificates: "myblog,myblog-light,bankofanthos,onlineboutique,asm-workshop,pointofsales,acm-workshop"
    networking.gke.io/v1beta1.FrontendConfig: asm-ingressgateway
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: asm-ingressgateway
            port:
              number: 443
