namespaces/asm-ingress/authorizationpolicies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: asm-ingressgateway
spec:
  selector:
    matchLabels:
      app: asm-ingressgateway
  rules:
  - to:
      - operation:
          ports: ["8080"]
