namespaces/asm-ingress/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: asm-ingressgateway
spec:
  podSelector:
    matchLabels:
      app: asm-ingressgateway
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
